src/test/deca/context/valid/homemade/tests/test29_param_void.deca
// test valide de la règle 2.9


class A {
    int value(float x){}
    void print(){}
    String name(int ent, int virg){}
}