src/test/deca/context/invalid/homemade/tests/test342_new_no_class_boolean.deca
// test invalide de la règle 3.42



class A {
    int x;
}

{
    
    boolean a = new boolean();
}